fix: map overlap nav

--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -91,19 +91,6 @@ $seafoam: #b2d2a4;
   );
 }
 
-.info-box {
-  opacity: 0.93;
-  background: #FFF;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.5);
-  padding: 5% 2%;
-  margin-top: 20%;
-  color: #000;
-  font-family: "Jost", sans-serif;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 170%;
-}
 
 .quicklink-container {
   margin: 3%;
@@ -436,8 +423,7 @@ nav {
 #basemap {
   z-index: 0 !important;
   position: fixed;
-  top: 44px;
-  height: calc(100% - 44px);
+  height: 100vh;
   width: 100%;
   //.leaflet-map-pane
 }
